@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.999375-44
-Date: 2010-08-09
+Date: 2010-08-11
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
